# cxx-project-template

./: CMakeLists.txt  README.md  main.cpp
cmake/: Dependencies.cmake  Settings.cmake
include/bringauto/: Lib.hpp
source/bringauto/: Lib.cpp
